Wrap check image name response in struct
